# giants-core

./: .gitignore  .ipynb  Makefile  README.md  pyproject.toml
.streamlit/: config.toml
chain/: Makefile  pyproject.toml
chain/src/: chunking.py  cleaning.py  config.py  embeddings.py  generation.py  indexing.py  llm.py  pinecone_api.py  reading.py  search.py  semantic_search.py  similarity_search.py  vector_db.py
chroma_db/e7493a1f-fc07-43b8-852c-2b25687b7e25/: index_metadata.pickle
data/responses/llama-3.3-70b-versatile/: Describe Nkrumah emotional state when he found out about the coup.json  How did the coup affect Ghana's development?.json  How was Nkumah able to campaign for independence?.json  What reasons could the West have had for wanting Nkrumah out of the way?.json  Where was Nkrumah's family during the coup?.json
data/responses/wayfarer-12b-gguf-hva/: Did Kwame Nkrumah face assassination attempts?.json  How did Nkrumah describe the workings of neo-colonialism?.json  How did Nkrumah's fall affect Ghana's development?.json  Please elaborate.json  What did Nkrumah say about the IMF?.json  What policies did the coup plotters implement once they overthrew Nkrumah?.json  Why was Nkrumah so insistent that Africa must unite?.json  nkrumah's most loyal staff.json
from_scratch/: Makefile  pyproject.toml
from_scratch/src/: chunking.py  config.py  embeddings.py  processing.py  reading.py  segmentation.py  semantic_search.py  tokenizer.py
general/: Makefile  pyproject.toml
general/general/: books.py  cleaning.py  config.py  paths.py  reading.py  remote_storage.py  storage.py
src/: books.py  chunking.py  cleaning.py  client.py  config.py  embeddings.py  experimentation.py  generation.py  llm.py  paths.py  reading.py  retrieval.py  similarity_search.py  types.py  vector_db.py
src/chain/: Makefile  data_extraction.py  pyproject.toml
src/chain/feature_pipeline/: data_extraction.py
src/chain/setup/: paths.py
src/data_preparation/: archive.py  authors.py  books.py  chunking.py  cleaning.py  desiderata.py  management.py  ocr.py  page_manipulation.py  reading.py  scraper.py  scraping.py  sourcing.py  text_selection.py  utils.py
src/data_processing/: chunking.py  cleaning.py  reading.py
src/feature_pipeline/: chunking.py  data_extraction.py  embeddings.py  preprocessing.py  reading.py  segmentation.py  semantic_search.py  tokenizer.py
src/from_scratch/: Makefile  data_extraction.py  embeddings.py  pyproject.toml  reading.py  semantic_search.py
src/from_scratch/feature_pipeline/: chunking.py  data_extraction.py  embeddings.py  preprocessing.py  reading.py  segmentation.py  semantic_search.py  tokenizer.py
src/from_scratch/setup/: config.py  paths.py
src/frontend/: chat.py  intro.py  main.py  videos.py
src/general/: pyproject.toml
src/generation/: appendix.py  experimentation.py  history.py  main.py  memory.py
src/graph/: appendix.py  graph.py  nodes.py  state.py
src/indexing/: embeddings.py
src/retrieval/: query.py  utils.py  vector_store.py
src/setup/: config.py  paths.py  types.py
src/vector_store/: embeddings.py  retrieval.py
