[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "chromadb>=0.6.3",
    "ebooklib>=0.18",
    "langchain>=0.3.21",
    "langchain-chroma>=0.2.2",
    "langchain-community>=0.3.20",
    "langchain-groq>=0.3.1",
    "langchain-huggingface>=0.1.2",
    "loguru>=0.7.3",
    "mobi>=0.1.0",
    "pdf2image>=1.17.0",
    "pydantic-settings>=2.8.1",
    "pypdf>=5.4.0",
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "sentence-transformers>=4.0.1",
    "torrentp>=0.2.3",
    "tqdm>=4.67.1",
    "transformers>=4.50.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

