[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Kobina Brandon <kobinabrandon@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.10"
loguru = "^0.7.3"
requests = "^2.32.3"
general = {path = "../general"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
