[tool.poetry]
name = "general"
version = "0.1.0"
description = ""
authors = ["Kobina Brandon <kobinabrandon@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13, >=3.9"
requests = "^2.32.3"
loguru = "^0.7.3"
pymupdf = "^1.25.0"
pydantic-settings = "^2.6.1"
tqdm = "^4.67.1"
dropbox = "^12.0.2"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
